# PxF-Framework-Webview

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml  tests_embedder.yaml
pxf_framework_webview/: __init__.py
pxf_framework_webview/interface/frames/webview/: config.py  frame.py
pxf_framework_webview/interface/frames/webview/controls/: __init__.py
pxf_framework_webview/stubs/webview_epy/: window.pyi
pxf_framework_webview/web/: window.html  window_other.html
